# KtClr

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  maven_install.json
asmnet/: AssemblyDeclaration.kt  AssemblyFlags.kt  BUILD.bazel  CallConv.kt  CallKind.kt  ClassVisitor.kt  CustomAttributeReference.kt  DataItem.kt  DataLabel.kt  EventAttributes.kt  EventVisitor.kt  ExceptionFlag.kt  ExportedTypeVisitor.kt  ExternAssemblyDeclaration.kt  FieldAttributes.kt  FieldInitValue.kt  FieldReference.kt  FieldVisitor.kt  Flags.kt  HashAlgorithm.kt  ImplementationAttributes.kt  Label.kt  LocalVariable.kt  ManifestResourceAttributes.kt  ManifestResourceVisitor.kt  MarshalDescriptor.kt  MethodAttributes.kt  MethodCallReference.kt  MethodParameter.kt  MethodReference.kt  MethodSignature.kt  MethodVisitor.kt  ModuleVisitor.kt  OpCode.kt  ParamAttributes.kt  Parameter.kt  PropertyAttributes.kt  PropertyVisitor.kt  RuntimeFlags.kt  SourceLineInfo.kt  (+5 more)
asmnet/binary/: BUILD.bazel  ByteBufferExt.kt  CliHeader.kt  CoffHeader.kt  DataDirectory.kt  DllCharacteristics.kt  DosHeader.kt  Flags.kt  ImageCharacteristics.kt  MachineType.kt  MetadataRoot.kt  OptionalHeader.kt  PeSignature.kt  SectionFlags.kt  SectionHeader.kt
asmnet/binary/reader/: BUILD.bazel  BlobHeap.kt  ByteBufExt.kt  CliHeaderReader.kt  CoffHeaderReader.kt  DosHeaderReader.kt  GuidHeap.kt  ILBinaryReader.kt  MetadataRootReader.kt  OptionalHeaderReader.kt  PeHeaderReader.kt  SectionHeaderReader.kt  StringHeap.kt  UserStringHeap.kt
asmnet/binary/reader/test/: BUILD.bazel  HeaderReaderTest.kt  HeapReaderTest.kt  MappedByteBufTest.kt  PeFileTest.kt  RunfileDummy.java  hello_world.il
asmnet/binary/reader/util/: ByteBufExt.kt  MappedByteBuf.kt  NumberExt.kt  ZeroByteBuf.kt
asmnet/dsl/: BUILD.bazel  ClassDslScope.kt  Dsl.kt  EventDslScope.kt  ExportedTypeDslScope.kt  FieldDslScope.kt  ManifestResourceDslScope.kt  MethodDslScope.kt  ModuleDslScope.kt  PropertyDslScope.kt  TypeForwarderDslScope.kt
asmnet/il/writer/: BUILD.bazel  DataLabelRegistry.kt  ILTextClassWriter.kt  ILTextEventWriter.kt  ILTextExportedTypeWriter.kt  ILTextFieldWriter.kt  ILTextManifestResourceWriter.kt  ILTextMethodWriter.kt  ILTextModuleWriter.kt  ILTextPropertyWriter.kt  ILTextTypeForwarderWriter.kt  TextWriter.kt  WriteScope.kt  WriterExtensions.kt
asmnet/il/writer/test/: AssemblyTest.kt  BUILD.bazel  ClassTest.kt  DataTest.kt  EventTest.kt  ExceptionHandlerTest.kt  ExportedTypeTest.kt  FieldTest.kt  InstructionTest.kt  MethodTest.kt  ModuleTest.kt  PInvokeTest.kt  PropertyTest.kt  TypeForwarderTest.kt  Util.kt
asmnet/il/writer/test/integration/: BUILD.bazel  HelloWorldGenerator.kt  integration.bzl
asmnet/il/writer/test/integration/data/: BUILD.bazel  DataTestGenerator.kt
asmnet/il/writer/test/integration/event/: BUILD.bazel  EventTestGenerator.kt
asmnet/il/writer/test/integration/field/: BUILD.bazel  FieldTestGenerator.kt  field_test.runtimeconfig.json
asmnet/il/writer/test/integration/hello_world/: BUILD.bazel  HelloWorldGenerator.kt
asmnet/il/writer/test/integration/jump_insn/: BUILD.bazel  JumpInsnGenerator.kt
asmnet/il/writer/test/integration/local_variable/: BUILD.bazel  LocalVariableGenerator.kt
asmnet/il/writer/test/integration/marshal/: BUILD.bazel  MarshalGenerator.kt
asmnet/il/writer/test/integration/pinvoke/: BUILD.bazel  PinvokeGenerator.kt
asmnet/il/writer/test/integration/property/: BUILD.bazel  PropertyTestGenerator.kt
asmnet/il/writer/test/integration/source_line/: BUILD.bazel  SourceLineGenerator.kt
asmnet/il/writer/test/integration/switch_insn/: BUILD.bazel  SwitchInsnGenerator.kt
asmnet/il/writer/test/integration/try_catch/: BUILD.bazel  TryCatchGenerator.kt
asmnet/il/writer/test/integration/try_filter/: BUILD.bazel  TryFilterGenerator.kt
asmnet/il/writer/test/integration/try_finally/: BUILD.bazel  TryFinallyGenerator.kt
asmnet/il/writer/test/integration/type_forwarder/: BUILD.bazel  ForwarderGenerator.kt  LibGenerator.kt  MainGenerator.kt
asmnet/il/writer/test/integration/type_insn/: BUILD.bazel  TypeInsnGenerator.kt
asmnet/test/event/: BUILD.bazel
asmnet/test/event_test/: BUILD.bazel  EventTest.cs
asmnet/test/field/: BUILD.bazel  FieldTest.cs
asmnet/test/field_test/: BUILD.bazel
asmnet/test/hello_world/: BUILD.bazel  Hello.cs
asmnet/test/jump/: BUILD.bazel  JumpTest.cs
asmnet/test/jump_test/: BUILD.bazel
asmnet/test/local_variable/: BUILD.bazel  LocalVariable.cs
asmnet/test/marshal/: BUILD.bazel
asmnet/test/marshal_test/: BUILD.bazel  MarshalTest.cs
asmnet/test/pinvoke/: BUILD.bazel  PinvokeTest.cs
asmnet/test/pinvoke_test/: BUILD.bazel
asmnet/test/property/: BUILD.bazel  PropertyTest.cs
asmnet/test/property_test/: BUILD.bazel
asmnet/test/switch/: BUILD.bazel
asmnet/test/switch_test/: BUILD.bazel  SwitchTest.cs
asmnet/test/try_catch/: BUILD.bazel  TryCatch.cs
asmnet/test/try_filter/: BUILD.bazel  TryFilter.cs
asmnet/test/try_finally/: BUILD.bazel  TryFinally.cs
asmnet/test/type/: BUILD.bazel
asmnet/test/type_test/: BUILD.bazel  TypeTest.cs
config/: BUILD.bazel
rule/: il.bzl
rule/antlr/: java.bzl
rule/dotnet/: BUILD.bazel  il.bzl
