module(name = "ktclr")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_kotlin", version = "2.3.20")
bazel_dep(name = "rules_dotnet", version = "0.21.5")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "platforms", version = "1.0.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.jetbrains.kotlin:kotlin-compiler:2.3.20",
        "junit:junit:4.13.2",
        "org.jetbrains.kotlin:kotlin-test-junit:2.3.20",
    ],
    fetch_sources = True,
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "ilasm_win_x64",
    build_file_content = 'alias(name = "ilasm", actual = "native/ilasm.exe", visibility = ["//visibility:public"])',
    sha256 = "eac9e5ca8663bb55101cab17f18af4a10a2941757fd30b44bd35839e49ec79a8",
    strip_prefix = "runtimes/win-x64",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.win-x64.Microsoft.NETCore.ILAsm/10.0.5",
)

http_archive(
    name = "ildasm_win_x64",
    build_file_content = 'alias(name = "ildasm", actual = "native/ildasm.exe", visibility = ["//visibility:public"])',
    sha256 = "7f8bb1dcf47deb93ff9c6944180dbebd0cd243155e76e6445bb1f3abc4d423f4",
    strip_prefix = "runtimes/win-x64",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.win-x64.Microsoft.NETCore.ILDAsm/10.0.5",
)

http_archive(
    name = "ilasm_linux_x64",
    build_file_content = 'alias(name = "ilasm", actual = "native/ilasm", visibility = ["//visibility:public"])',
    sha256 = "9a8fa85d3c7477531806ef84a14f364b74b0ea12e91aaf0c343558a52525c037",
    strip_prefix = "runtimes/linux-x64",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.linux-x64.Microsoft.NETCore.ILAsm/10.0.5",
)

http_archive(
    name = "ildasm_linux_x64",
    build_file_content = 'alias(name = "ildasm", actual = "native/ildasm", visibility = ["//visibility:public"])',
    sha256 = "bff5d8eb12380c957db3c0348972cf3261428b8615d4e28fbf136019965e986f",
    strip_prefix = "runtimes/linux-x64",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.linux-x64.Microsoft.NETCore.ILDAsm/10.0.5",
)

http_archive(
    name = "ilasm_linux_arm64",
    build_file_content = 'alias(name = "ilasm", actual = "native/ilasm", visibility = ["//visibility:public"])',
    sha256 = "17bcd9cdaee1c8949b22fefe5df4f92daf3faf8846179dfb9cebf26bdb4fcbdd",
    strip_prefix = "runtimes/linux-arm64",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.linux-arm64.Microsoft.NETCore.ILAsm/10.0.5",
)

http_archive(
    name = "ildasm_linux_arm64",
    build_file_content = 'alias(name = "ildasm", actual = "native/ildasm", visibility = ["//visibility:public"])',
    sha256 = "ae2022aecf016718a1807c83c3c66e03ffe48745ad296ab4ce70e1c37c2860f0",
    strip_prefix = "runtimes/linux-arm64",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.linux-arm64.Microsoft.NETCore.ILDAsm/10.0.5",
)

http_archive(
    name = "ilasm_osx_x64",
    build_file_content = 'alias(name = "ilasm", actual = "native/ilasm", visibility = ["//visibility:public"])',
    sha256 = "7f2aa235a98b43a1234e0c405f4d94fb06cbaf0db1c7514f567f9ee884ef48ff",
    strip_prefix = "runtimes/osx-x64",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.osx-x64.Microsoft.NETCore.ILAsm/10.0.5",
)

http_archive(
    name = "ildasm_osx_x64",
    build_file_content = 'alias(name = "ildasm", actual = "native/ildasm", visibility = ["//visibility:public"])',
    sha256 = "49a785da3abe8786f6ceadaf629e27272aa649e07ffdfbb8b46182ac5e48a0cd",
    strip_prefix = "runtimes/osx-x64",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.osx-x64.Microsoft.NETCore.ILDAsm/10.0.5",
)

http_archive(
    name = "ilasm_osx_arm64",
    build_file_content = 'alias(name = "ilasm", actual = "native/ilasm", visibility = ["//visibility:public"])',
    sha256 = "dbe5d8ed855732380b551131f96c00756e374a59c08883a914eb0bd101710c94",
    strip_prefix = "runtimes/osx-arm64",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.osx-arm64.Microsoft.NETCore.ILAsm/10.0.5",
)

http_archive(
    name = "ildasm_osx_arm64",
    build_file_content = 'alias(name = "ildasm", actual = "native/ildasm", visibility = ["//visibility:public"])',
    sha256 = "646dfc625d1f6e92a90e31cb31f50e8b8a39c25cd41991fa61f2cf4884ae28a6",
    strip_prefix = "runtimes/osx-arm64",
    type = "zip",
    url = "https://www.nuget.org/api/v2/package/runtime.osx-arm64.Microsoft.NETCore.ILDAsm/10.0.5",
)

register_toolchains("//:kotlin_toolchain")
