load("@bazel_skylib//rules:select_file.bzl", "select_file")
load("@rules_dotnet//dotnet:defs.bzl", "csharp_binary")
load("//rule/dotnet:il.bzl", "ildasm")

csharp_binary(
    name = "lib",
    srcs = ["MarshalTest.cs"],
    out = "marshal",
    target_compatible_with = ["@platforms//os:windows"],
    target_frameworks = ["net10.0"],
)

select_file(
    name = "dll",
    srcs = ":lib",
    subpath = "marshal.dll",
)

ildasm(
    name = "ir",
    input = ":dll",
    visibility = ["//asmnet:__subpackages__"],
)
