load("@rules_java//java:defs.bzl", "java_library")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("//rule/dotnet:il.bzl", "ilasm_dll")

ilasm_dll(
    name = "hello_world_dll",
    input = "hello_world.il",
    visibility = ["//visibility:public"],
)

java_library(
    name = "runfile_dummy_lib",
    srcs = ["RunfileDummy.java"],
    deps = ["@bazel_tools//tools/java/runfiles"],
)

kt_jvm_test(
    name = "header_reader",
    srcs = ["HeaderReaderTest.kt"],
    associates = ["//asmnet/binary/reader"],
    test_class = "top.fifthlight.asmnet.binary.reader.test.HeaderReaderTest",
    deps = [
        "//asmnet",
        "//asmnet/binary",
        "@maven//:io_netty_netty_buffer",
        "@maven//:junit_junit",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
    ],
)

kt_jvm_test(
    name = "mapped_byte_buf",
    srcs = ["MappedByteBufTest.kt"],
    associates = ["//asmnet/binary/reader"],
    test_class = "top.fifthlight.asmnet.binary.reader.test.MappedByteBufTest",
    deps = [
        "//asmnet/binary",
        "@maven//:io_netty_netty_buffer",
        "@maven//:junit_junit",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
    ],
)

kt_jvm_test(
    name = "heap_reader",
    srcs = ["HeapReaderTest.kt"],
    associates = ["//asmnet/binary/reader"],
    test_class = "top.fifthlight.asmnet.binary.reader.test.HeapReaderTest",
    deps = [
        "@maven//:io_netty_netty_buffer",
        "@maven//:junit_junit",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
    ],
)

kt_jvm_test(
    name = "pe_file_test",
    srcs = ["PeFileTest.kt"],
    associates = ["//asmnet/binary/reader"],
    data = [":hello_world_dll"],
    jvm_flags = ["-Dhello_world_dll_path=$(rlocationpath :hello_world_dll)"],
    test_class = "top.fifthlight.asmnet.binary.reader.test.PeFileTest",
    deps = [
        ":runfile_dummy_lib",
        "//asmnet",
        "//asmnet/binary",
        "@maven//:io_netty_netty_buffer",
        "@maven//:io_netty_netty_common",
        "@maven//:junit_junit",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
    ],
)
