load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")

kt_jvm_library(
    name = "util",
    srcs = ["Util.kt"],
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
        "@maven//:org_jetbrains_kotlin_kotlin_test",
    ],
)

kt_jvm_test(
    name = "assembly",
    srcs = ["AssemblyTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.AssemblyTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "module",
    srcs = ["ModuleTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.ModuleTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "class",
    srcs = ["ClassTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.ClassTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "method",
    srcs = ["MethodTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.MethodTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "instruction",
    srcs = ["InstructionTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.InstructionTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "field",
    srcs = ["FieldTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.FieldTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "property",
    srcs = ["PropertyTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.PropertyTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "event",
    srcs = ["EventTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.EventTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "exception_handler",
    srcs = ["ExceptionHandlerTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.ExceptionHandlerTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "pinvoke",
    srcs = ["PInvokeTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.PInvokeTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "data",
    srcs = ["DataTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.DataTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "exported_type",
    srcs = ["ExportedTypeTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.ExportedTypeTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)

kt_jvm_test(
    name = "type_forwarder",
    srcs = ["TypeForwarderTest.kt"],
    test_class = "top.fifthlight.asmnet.il.writer.test.TypeForwarderTest",
    deps = [
        ":util",
        "//asmnet",
        "//asmnet/dsl",
        "@maven//:junit_junit",
    ],
)
