load("//asmnet/il/writer/test/integration:integration.bzl", "integration_test")

integration_test(
    name = "event",
    srcs = ["EventTestGenerator.kt"],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.event.EventTestGeneratorKt",
    runtimeconfig = "event_test.runtimeconfig.json",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
    expected = [
        "Event fired!",
        "Another handler!",
        "Event fired!",
        "Another handler!",
        "Event fired!",
        "Another handler!",
        "6",
        "",
    ]
)
