load("//asmnet/il/writer/test/integration:integration.bzl", "integration_test")

integration_test(
    name = "field",
    srcs = ["FieldTestGenerator.kt"],
    expected = [
        "10",
        "",
    ],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.field.FieldTestGeneratorKt",
    runtimeconfig = "field_test.runtimeconfig.json",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
)
