load("//asmnet/il/writer/test/integration:integration.bzl", "integration_test")

integration_test(
    name = "hello_world",
    srcs = ["HelloWorldGenerator.kt"],
    expected = [
        "Hello, world!",
        "",
    ],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.hello_world.HelloWorldGeneratorKt",
    runtimeconfig = "hello_world.runtimeconfig.json",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
)
