load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("//rule:il.bzl", "ilasm_exe")

kt_jvm_binary(
    name = "gen",
    srcs = ["JumpInsnGenerator.kt"],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.jump_insn.JumpInsnGeneratorKt",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
)

genrule(
    name = "ir",
    outs = ["jump_insn.il"],
    cmd = "$(location :gen) $@",
    tools = [":gen"],
    visibility = ["//visibility:private"],
)

ilasm_exe(
    name = "jump_insn",
    input = ":ir",
    runtimeconfig = "jump_insn.runtimeconfig.json",
    visibility = ["//visibility:public"],
)
