load("//asmnet/il/writer/test/integration:integration.bzl", "integration_test")

integration_test(
    name = "jump_insn",
    srcs = ["JumpInsnGenerator.kt"],
    expected = [
        "15",
        "big",
        "",
    ],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.jump_insn.JumpInsnGeneratorKt",
    runtimeconfig = "jump_insn.runtimeconfig.json",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
)
