load("//asmnet/il/writer/test/integration:integration.bzl", "integration_test")

integration_test(
    name = "local_variable",
    srcs = ["LocalVariableGenerator.kt"],
    expected = [
        "30",
        "",
    ],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.local_variable.LocalVariableGeneratorKt",
    runtimeconfig = "local_variable.runtimeconfig.json",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
)
