load("//asmnet/il/writer/test/integration:integration.bzl", "integration_test")

integration_test(
    name = "pinvoke",
    srcs = ["PinvokeGenerator.kt"],
    expected = [
        "PASS",
        "",
    ],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.pinvoke.PinvokeGeneratorKt",
    runtimeconfig = "pinvoke_test.runtimeconfig.json",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
    target_compatible_with = ["@platforms//os:windows"],
)
