load("//asmnet/il/writer/test/integration:integration.bzl", "integration_test")

integration_test(
    name = "property",
    srcs = ["PropertyTestGenerator.kt"],
    expected = [
        "42",
        "99",
        "",
    ],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.property.PropertyTestGeneratorKt",
    runtimeconfig = "property_test.runtimeconfig.json",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
)
