load("//asmnet/il/writer/test/integration:integration.bzl", "integration_test")

integration_test(
    name = "switch_insn",
    srcs = ["SwitchInsnGenerator.kt"],
    expected = [
        "two",
        "",
    ],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.switch_insn.SwitchInsnGeneratorKt",
    runtimeconfig = "switch_insn.runtimeconfig.json",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
)
