load("//asmnet/il/writer/test/integration:integration.bzl", "integration_test")

integration_test(
    name = "try_filter",
    srcs = ["TryFilterGenerator.kt"],
    expected = [
        "Filtered!",
        "Done",
    ],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.try_filter.TryFilterGeneratorKt",
    runtimeconfig = "try_filter_test.runtimeconfig.json",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
)
