load("//asmnet/il/writer/test/integration:integration.bzl", "integration_test")

integration_test(
    name = "type_insn",
    srcs = ["TypeInsnGenerator.kt"],
    expected = [
        "60",
        "42",
        "hello",
        "",
    ],
    main_class = "top.fifthlight.asmnet.il.writer.test.integration.type_insn.TypeInsnGeneratorKt",
    runtimeconfig = "type_insn.runtimeconfig.json",
    deps = [
        "//asmnet",
        "//asmnet/dsl",
        "//asmnet/il/writer",
    ],
)
